More refactors
added springboot to pom. Replaced getfirst and other array related functions with working ones.